# learning-python-book-notes

./: Add bookmark in Safari.html  README.md  pyproject.toml  questions.txt  scrapbook.py  test.py
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
Data Structure and Algo/: DS and Algo.ipynb
Data Structure and Algo/.ipynb_checkpoints/: DS and Algo-checkpoint.ipynb
chapters/: 1-prologue.md  1-prologue.py  10-tuples.ipynb  10.1-files.ipynb  10.2-type-objects-gotchas.ipynb  11-statements-controlflow.ipynb  12-if-match-selection.ipynb  13-while-for-loops.ipynb  14-iter-comprehension.ipynb  15-document-interlude.ipynb  16-function-basics.ipynb  17-Scopes.ipynb  18-arguments.ipynb  19-function-odd-ends.ipynb  2-execution-model.md  2-execution-model.py  2-python-code-execution.py  20-functional-tools.ipynb  21-comprehension-and-generations.ipynb  22-timeit.ipynb  23-classes-oops.ipynb  5-numbers-expression.ipynb  6-dynamic-typing-interlude.ipynb  7-string-fundamentals.ipynb  8-list-dicts.ipynb  9-revision-list-dict.ipynb  Untitled.ipynb  benchmarking_proxy.py  benchmarking_script.py  class-tree.py  data.pkl  data.txt  function-odd-ends.py  print.txt  py.py  pybench_runner.py  random.py  requests_caller.py  sys.py  text.txt
exercises/: 3-iteration-itertools.ipynb  4-mini-query-engine.ipynb  demo.txt  new-sample.txt  sample.txt  scrapbook.ipynb
flat_files/: main.py  socket_rollback.py  socket_run.py
main_packages/: __init__.py  __main__.py
standalone-executables/: standalone-executable.spec
standalone_and_import_packages/: __init__.py  __main__.py
(+65 files in other folders)
