[project]
name = "learning-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "guppy3>=3.1.5",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "objgraph>=3.6.2",
    "pyinstaller>=6.14.1",
]
[tool.ruff.lint]
ignore = ["F401"]  # F401 = unused imports
